--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@carbon/icons-react": "^10.20.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/electron-devtools-installer": "^2.2.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "carbon-icons": "7.0.7",
     "electron-devtools-installer": "^3.1.1",
     "electron-is-dev": "^1.2.0",
     "electron-reload": "^1.5.0",
     "electron-store": "^6.0.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "shards-react": "^1.0.3",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -52,6 +53,8 @@
     ]
   },
   "devDependencies": {
+    "@types/carbon__icons-react": "^10.19.0",
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/styled-components": "^5.1.4",
     "concurrently": "^5.3.0",
     "electron": "^10.1.5",
