--- a/package.json
+++ b/package.json
@@ -3,25 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@carbon/icons-react": "^10.20.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "carbon-icons": "7.0.7",
     "electron-devtools-installer": "^3.1.1",
     "electron-is-dev": "^1.2.0",
     "electron-reload": "^1.5.0",
     "electron-store": "^6.0.1",
     "node-sass": "^4.14.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "shards-react": "^1.0.3",
-    "styled-components": "^5.2.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -30,6 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "prettier": "prettier --config .prettierrc.json --parser typescript --write \"./src/**/*.{js,ts,tsx}\"",
     "postinstall": "electron-builder install-app-deps",
     "electron:dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
     "electron:build": "yarn build && tsc -p electron && electron-builder"
@@ -53,12 +40,27 @@
     ]
   },
   "devDependencies": {
+    "carbon-icons": "7.0.7",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@carbon/icons-react": "^10.20.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.0",
+    "shards-react": "^1.0.3",
+    "styled-components": "^5.2.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@types/carbon__icons-react": "^10.19.0",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/styled-components": "^5.1.4",
     "concurrently": "^5.3.0",
     "electron": "^10.1.5",
     "electron-builder": "^22.9.1",
+    "prettier": "^2.1.2",
     "wait-on": "^5.2.0"
   },
   "build": {
